@@ -12,6 +12,8 @@ New Features:
 Bugfixes:
 - "NetStream.Record.Failed" is sent for IO errors that occurred during
   recording (Jira APPSERVER-64)
+- fixed possible deadlock if methods are invoked by a connecting client
+  on a client that is currently disconnecting (Jira APPSERVER-108)
 
 
 Red5 0.6    (2007-04-23)
